Fix misaligned icon

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -68,7 +68,7 @@ $spv-navigation-logo: 0.3125rem;
     display: block;
     font-weight: $font-weight-bold;
     line-height: map-get($line-heights, default-text);
-    margin-bottom: 0;
+    margin: 0;
     overflow: hidden;
     position: relative;
     text-align: left;
